# dogirealms

./: CMakeLists.txt
src/: common.cc  common.hh  main.cc  render.hh  window.hh
src/game/: game.cc  game.hh  game_public.hh
src/glad/: glad.cc  glad.hh
src/rend_m1/: m1.cc  m1.hh  m1_mesh.cc  m1_public.hh  m1_shader.cc
src/sdl/: window_sdl.cc  window_sdl.hh
